# lunapark

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.fastapi  README.md  create_index.py  design_doc.md  docker-compose.yml  experiments.ipynb  mypy.ini  nginx.conf  pyproject.toml  requirements-service.txt  requirements.txt  setup.py
app/: streamlit_app.py
notebooks/: airtable_test.ipynb  bert_baseline.ipynb  experiments.ipynb  plots.ipynb  preprocess.ipynb  rag_baseline.ipynb
platform/: __init__.py  dummy_predictor.py
service/: app.py  models.py  test_api.py
src/: setup_and_run.py
src/app/: streamlit_app.py  tools.py
src/benchmark/: benchmark.py  process_scores.py  summaries.py  utils.py
src/platform/: __init__.py  base_predictor.py  base_summarizer.py  cv_summarizer.py  dummy_predictor.py  lm_predictor.py  vacancy_summarizer.py
src/platform/graph/: __init__.py  knowledge_graph.py
src/platform/rag/: __init__.py  airtable_loader.py  create_vector_indexes.py  graph_rag_predictor.py  load_airtable_data.py  load_sample_data.py  parse_resume_example.py  resume_parser.py  setup_vector_search.py
src/service/: app.py  database.py  models.py  runpod.py  test_api.py  test_app.py
src/service/airtable_client/: airtable_client.py  cv_manager.py  pair_manager.py  vacancy_manager.py
