[tool.poetry]
name = "lunapark"
version = "0.2.0"
description = ""
authors = ["Konstantin.Grotov <konstantin.grotov@gmail.com>"]
readme = "README.md"

packages = [
    { include = "app" },
    { include = "service" },
    { include = "platform" }
]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.research.dependencies]
jupyter = "^1.1.1"
notebook = "^7.2.2"


[tool.poetry.group.service.dependencies]
fastapi = "^0.115.3"
requests = "^2.32.3"
uvicorn = "^0.32.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.7.1"
isort = "^5.13.2"
mypy = "^1.13.0"


[tool.poetry.group.web.dependencies]
streamlit = "^1.39.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
web = "streamlit:run_script app/streamlit_app.py"
