[tool.poetry]
name = "lunapark"
version = "0.2.0"
description = ""
authors = ["Konstantin.Grotov <konstantin.grotov@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
python-dotenv = "^1.1.0"
runpod = "^1.7.9"
scikit-learn = "^1.6.1"
numpy = "^2.2.5"
pyairtable = "^3.1.1"
neo4j = "^5.28.1"
sentence-transformers = "^4.1.0"
neo4j-graphrag = "^1.7.0"
pypdf2 = "^3.0.1"


[tool.poetry.group.research.dependencies]
jupyter = "^1.1.1"
notebook = "^7.2.2"
torch = { version = "^2.7.0+cu128", source = "pytorch" }

[tool.poetry.group.service.dependencies]
fastapi = "^0.115.9"
requests = "^2.32.3"
uvicorn = "^0.32.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.7.1"
isort = "^5.13.2"
mypy = "^1.13.0"
ipykernel = "^6.29.5"


[tool.poetry.group.web.dependencies]
streamlit = "^1.39.0"
pypdf2 = "^3.0.1"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
web = "src.app.streamlit_app:run_script"

[tool.mypy]
ignore_missing_imports = true
